# OS_KP

./: CMakeLists.txt  README.md  config.yaml  config1.yaml  config_error.yaml  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
config/: parser.cpp  parser.h
core/: job.cpp  job.h  scheduler.cpp  scheduler.h  semaphoreManager.cpp  semaphoreManager.h  validator.cpp  validator.h
